@@ -362,6 +362,11 @@ static const struct fuse_opt option_list[] = {
         .value=     1
     },
     {
+        .templ=     "--noCurlCache",
+        .offset=    offsetof(struct s3b_config, http_io.no_curl_cache),
+        .value=     1
+    },
+    {
         .templ=     "--quiet",
         .offset=    offsetof(struct s3b_config, quiet),
         .value=     1
@@ -1930,6 +1935,7 @@ dump_config(const struct s3b_config *const c)
       c->max_speed_str[HTTP_DOWNLOAD] != NULL ? c->max_speed_str[HTTP_DOWNLOAD] : "-",
       c->http_io.max_speed[HTTP_DOWNLOAD]);
     (*c->log)(LOG_DEBUG, "%24s: %s", "http_11", c->http_io.http_11 ? "true" : "false");
+    (*c->log)(LOG_DEBUG, "%24s: %s", "noCurlCache", c->http_io.no_curl_cache ? "true" : "false");
     (*c->log)(LOG_DEBUG, "%24s: %us", "timeout", c->http_io.timeout);
     (*c->log)(LOG_DEBUG, "%24s: \"%s\"", "sse", c->http_io.sse);
     (*c->log)(LOG_DEBUG, "%24s: \"%s\"", "sse-key-id", c->http_io.sse_key_id);
@@ -2012,6 +2018,7 @@ usage(void)
     fprintf(stderr, "\t--%-27s %s\n", "force", "Ignore different auto-detected block and file sizes");
     fprintf(stderr, "\t--%-27s %s\n", "help", "Show this information and exit");
     fprintf(stderr, "\t--%-27s %s\n", "http11", "Restrict to HTTP version 1.1");
+    fprintf(stderr, "\t--%-27s %s\n", "noCurlCache", "Disable caching of cURL handles");
     fprintf(stderr, "\t--%-27s %s\n", "initialRetryPause=MILLIS", "Initial retry pause after stale data or server error");
     fprintf(stderr, "\t--%-27s %s\n", "insecure", "Don't verify SSL server identity");
     fprintf(stderr, "\t--%-27s %s\n", "keyLength", "Override generated cipher key length");
